# ECIL_Contract_Employees_Tech_Guide

./: LICENSE  README.md
ECIL_Contract_Employees_Tech_Guide/ECE/EmbeddedSystems/EmbeddedFirmware/C-Programming/AdaptiveSoC(FPGA-based)/Zynq-7000/Projects/Medium/SerialToEthernetConverter/: README.md
ECIL_Contract_Employees_Tech_Guide/ECE/EmbeddedSystems/EmbeddedFirmware/C-Programming/AdaptiveSoC(FPGA-based)/Zynq-7000/Theory/Medium/: Theory_PBUF.one
ECIL_Contract_Employees_Tech_Guide/ECE/EmbeddedSystems/EmbeddedSoftwareApplication/Qt/QtCreator/QtCore/Theory/Basics/CompilationProcessOfCPP/All_in_one_Resource/: READme.md
ECIL_Contract_Employees_Tech_Guide/Software/VHDL/00_Basics/: alu_simple.vhd  clock_divider.vhd  comparator_4bit.vhd  d_flipflop.vhd  d_latch.vhd  decoder_2to4.vhd  demux_1to4.vhd  encoder_priority.vhd  full_adder.vhd  gate_and.vhd  gate_nand.vhd  gate_not.vhd  gate_or.vhd  gate_xor.vhd  half_adder.vhd  jk_flipflop.vhd  mux_2to1.vhd  mux_4to1.vhd  param_counter.vhd  register_8bit.vhd  shift_reg_siso.vhd  sr_latch.vhd  t_flipflop.vhd  tri_state_buffer.vhd  vhdl_basics.vhd
ECIL_Contract_Employees_Tech_Guide/Software/VHDL/01_Stage1_Blinky/: blinky_led.vhd
ECIL_Contract_Employees_Tech_Guide/Software/VHDL/02_Stage2_Up_Counter/: binary_counter.vhd
ECIL_Contract_Employees_Tech_Guide/Software/VHDL/03_Stage3_Traffic_Light/: traffic_light_controller.vhd
QtBasics/HW2/ConsApp/: CMakeLists.txt  main.cpp
QtBasics/HW2/untitled1/: CMakeLists.txt  animal.cpp  animal.h
QtBasics/HW2/untitled2/: CMakeLists.txt
QtBasics/HelloWorld/: CMakeLists.txt  main.cpp
(+2 files in other folders)
